<resources>
    <string name="app_name">Doodle View</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="airwise_solutions_inc_doodle_mate_app">AirWise Solutions, Inc ---- Doodle Mate App</string>
    <string name="network_connected_devices">Network Connected Devices</string>
    <string name="drone_ip">Drone IP</string>
    <string name="gcs_ip">GCS IP</string>
    <string name="ground_control_ip">Ground Control IP</string>
    <string name="ground_controller">Ground Controller</string>
    <string name="ground_control">Ground Control</string>
    <string name="drone_1">Drone #1</string>
    <string name="drone_1_">Drone 1:</string>
    <string name="_drone_1">Drone #1</string>
    <string name="drone_2">Drone #2</string>
    <string name="drone_3">Drone 3</string>
    <string name="drone_3_">Drone #3</string>
    <string name="drone_4">Drone #4</string>
    <string name="drone_5">Drone#5</string>
    <string name="drone_5_">Drone #5</string>
    <string name="todo">TODO</string>
    <string name="Doodle_Mate_Help">TODO</string>
    <string name="gcs_ip_address">GCS IP Address</string>
    <string name="_192_168_xxx_xxx">192.168.xxx.xxx</string>
    <string name="IP_Address">^\\d{1,3}(\\.(\\d{1,3}(\\.(\\d{1,3}(\\.(\\d{1,3})?)?)?)?)?)?</string>
    <string name="resultingTxt">\\.</string>
    <string name="enter_ground_control_ip">Enter Ground Control IP</string>
    <string name="pair_network_connected_devices_aes_18_256">Pair Network Connected Devices (AES-18/256)</string>
    <string name="pair_network_connected_devices_aes_128_256_encryption">Pair Network Connected Devices (AES-128/256 Encryption)</string>
    <string name="easy_connect_drone_ip_copy_ip_to_clipboard">Easy Connect Drone IP (Copy IP to Clipboard)</string>
    <string name="qgroundcontrol_mission_planner_easy_connect_drone_ip_copy_ip_to_clipboard">QgroundControl/Mission Planner Easy Connect Drone IP (Copy IP to Clipboard)</string>
    <string name="qgroundcontrol_mission_planner_connect_drone_ip_copy_to_clipboard">QGroundControl/Mission Planner Connect Drone IP (Copy to Clipboard)</string>
    <string name="qgroundcontrol_mission_planner_connect_drone_ip_copy_to_clipboard_">QGroundControl / Mission Planner Connect Drone IP (Copy to Clipboard)</string>
    <string name="enter_drone_ip_to_connect">Enter Drone IP to Connect</string>
    <string name="Drone_IP">TextView</string>
    <string name="gcs_radio_portal">GCS Radio Portal</string>
    <string name="GCS_Portal">TODO</string>
    <string name="gcs_portal">GCS Portal</string>
    <string name="gcs_portal_">GCS Portal</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="drone_portal">Drone Portal</string>
    <string name="_help">Help</string>
    <string name="drone_radio_portal">Drone Radio Portal</string>
    <string name="gcs_radio_portal_">GCS Radio Portal</string>
    <string name="drone_radio_portal_">Drone Radio Portal</string>
    <string name="don_t_have_gcs_root_access">Don\'t Have GCS Root Access?</string>
    <string name="unrooted_device_steps">Unrooted Device Steps</string>
    <string name="_1_download_the_termux_terminal_app">1) Download the Termux Terminal App</string>
    <string name="open_the_termux_terminal_app">Open the Termux Terminal App</string>
    <string name="copy_the_ip_commands_here_click">Copy the Ip Commands Here (CLICK)</string>
    <string name="_2_copy_the_ip_commands_here_click">2) Copy the IP Commands Here (CLICK)</string>
    <string name="_3_open_the_termux_terminal_app_here_click">3) Open the Termux Terminal App Here (CLICK)</string>
    <string name="_4_paste_the_ip_commands_in_termux">4) Paste the IP Commands in Termux</string>
    <string name="_5_record_the_gcs_drone_ip_s_and_return_to_quot_home_quot">5) Record the GCS/ Drone IP\'s and Return to \"Home\"</string>
    <string name="_2_copy_the_commands_to_install_ip_package">2) Copy the Commands to Install IP Package</string>
    <string name="_3_open_the_termux_app_and_install_here_click">3) Open the Termux App and Install Here (CLICK)</string>
    <string name="_3_open_the_termux_app_and_paste_here_click">3) Open the Termux App and Paste Here (CLICK)</string>
    <string name="_4_copy_the_ip_command_here_click">4) Copy the IP Command Here (CLICK)</string>
    <string name="_5_paste_the_ip_command_in_termux_here_click">5) Paste the IP Command in Termux Here (CLICK)</string>
    <string name="_6_retrive_the_gcs_drone_ip_s_and_return_to_home">6) Retrive the GCS/Drone IP\'s and Return to Home</string>
    <string name="_2_copy_the_commands_to_install_ip_package_here_click">2) Copy the Commands to Install IP Package Here (CLICK)</string>
    <string name="_home">Home</string>
    <string name="_gcs_radio_portal">GCS Radio Portal</string>
    <string name="_drone_radio_portal">Drone Radio Portal</string>
    <string name="black">TODO</string>
    <string name="doodleviewlogo" />
    <string name="drone_radio" />
    <string name="gcs_radio" />
    <string name="gcs_radio_">GCS Radio</string>
    <string name="drone_radio_">Drone Radio</string>
    <string name="img5" />
    <string name="img6" />
    <string name="img11" />
    <string name="custom_text">Custom Text</string>
    <string name="imgv">imgV</string>
    <string name="ground_control_radio">Ground Control Radio</string>
    <string name="drone_radio_type">Drone Radio</string>
    <string name="drone_ip_to_connect">Drone IP to Connect</string>
    <string name="radio_frequency">Radio Frequency</string>
    <string name="radio_freq">Radio Frequency</string>
    <string name="backup_ip">Backup IP</string>
    <string name="ground_control_ip_">Ground Control IP</string>
    <string name="example">Example</string>
    <string name="backup_radio_ip_192_168_153_1">Backup Radio IP -- 192.168.153.1</string>
    <string name="backup_radio_ip_192_168_153_1_">Backup Radio IP = 192.168.153.1</string>
    <string name="_back_up_radio_ip_192_168_153_1">Back Up Radio IP --- 192.168.153.1</string>
    <string name="back_up_ip">Back Up IP</string>
    <string name="static_ip">TODO</string>
    <string name="static_ip_example">TODO</string>
    <string name="static_ip_exp">TODO</string>
    <string name="to_set_radio_back_up_static_ip">To Set Radio Back Up Static IP</string>
    <string name="set_device_static_ip_to_radio_backup_ip">Set Device Static IP to Radio Backup IP</string>
    <string name="connect_device_static_ip_to_radio_backup_ip">Connect Device Static IP to Radio Backup IP</string>
    <string name="tether_android_device_static_ip_to_radio_backup_ip">Tether Android Device Static IP to Radio Backup IP</string>
    <string name="connect_android_device_static_ip_to_radio_backup_ip">Connect Android Device Static IP to Radio Backup IP</string>
    <string name="settings_connections_more_connection_settings_ethernet_configure_ethernet_device_static_ip"><![CDATA[Settings --> Connections --> More Connection Settings --> Ethernet --> Configure Ethernet Device --> Static IP]]></string>
    <string name="backup_radio_ip_192_168_153_1__">Backup Radio IP --- 192.168.153.1</string>
    <string name="backup_ip_">Backup IP</string>
    <string name="example_device_static_ip_for_backup_radio_portal">Example Device Static IP for Backup Radio Portal</string>
    <string name="backup_radio_ip_portal">Backup Radio IP Portal</string>
    <string name="title_activity_main6">MainActivity6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="view_logo">view_logo</string>
    <string name="select_tool">Select Tool</string>
    <string name="suas_swarms">sUAS Swarms</string>
    <string name="mesh_map">Mesh Map</string>
    <string name="doodle_view_android_v1_21_by_airwise_solutions">Doodle View Android v1.21 by AirWise Solutions</string>
    <string name="close">Close</string>
    <string name="img7">TODO</string>
    <string name="view_logo2">view logo 2</string>
    <string name="swarm_awareness_kit">Swarm Awareness Kit</string>
    <string name="FlightManager">flight_manager</string>
    <string name="flightmanager">FlightManager</string>
    <string name="swarm_mesh_map">Swarm Mesh Map</string>
    <string name="radio_login_username_copy_to_clipboard">Radio Login Username (Copy to Clipboard)</string>
    <string name="root">root</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_password_copy_to_clipboard">Login Password (Copy to Clipboard)</string>
    <string name="login_username_copy_to_clipboard">Login Username (Copy to Clipboard)</string>
    <string name="login_username_copy_to_clipboard_">Login Username (Copy to Clipboard)</string>
    <string name="login_password_copy_to_clipboard_">Login Password (Copy to Clipboard)</string>
    <string name="encryption">Encryption</string>
    <string name="encryption_key_copy_to_clipboard">Encryption Key (Copy to Clipboard)</string>
    <string name="cipher">Cipher</string>
    <string name="encryption_type">Encryption Type</string>
    <string name="encryption_cipher">Encryption Cipher</string>
    <string name="encryption_key">Encryption Key</string>
    <string name="clear_key_data">Clear Key Data</string>
    <string name="flightmanager_portal">FlightManager Portal</string>
    <string name="doodle_view">Doodle View</string>
    <string name="suas_swarm_master_table">sUAS Swarm Master Table</string>
    <string name="drone_1_radio">Drone #1 Radio</string>
    <string name="img15">TODO</string>
    <string name="drone_1_ip">Drone #1 IP</string>
    <string name="drone_2_ip">Drone #2 IP</string>
    <string name="drone_2_radio">Drone #2 Radio</string>
    <string name="drone_3_ip">Drone #3 IP</string>
    <string name="drone_3_radio">Drone #3 Radio</string>
    <string name="drone_4_radio">Drone #4 Radio</string>
    <string name="drone_4_ip">Drone #4 IP</string>
    <string name="drone_5_ip">Drone #5 IP</string>
    <string name="drone_5_radio">Drone #5 Radio</string>
    <string name="drone_6_ip">Drone #6 IP</string>
    <string name="drone_6_radio">Drone #6 Radio</string>
    <string name="drone_7_ip">Drone #7 IP</string>
    <string name="drone_7_radio">Drone #7 Radio</string>
    <string name="drone_8_ip">Drone #8 IP</string>
    <string name="drone_8_radio">Drone #8 Radio</string>
    <string name="drone_9_ip">Drone #9 IP</string>
    <string name="drone_9_radio">Drone #9 Radio</string>
    <string name="drone_10_ip">Drone #10 IP</string>
    <string name="drone_10_radio">Drone #10 Radio</string>
    <string name="gcs_mav_sys_id">GCS MAV_SYS_ID</string>
    <string name="_255">255</string>
    <string name="mav_sys_id">MAV_SYS_ID</string>
    <string name="_1">1</string>
    <string name="uas_mav_sys_id">UAS MAV_SYS_ID</string>
    <string name="_2">2</string>
    <string name="mav_sys_id_">MAV_SYS_ID</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
</resources>