<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity5">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/connect_android_device_static_ip_to_radio_backup_ip"
        android:textColor="@color/black"
        android:textSize="24sp"

        android:textStyle="bold"


        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/settings_connections_more_connection_settings_ethernet_configure_ethernet_device_static_ip"
        android:textColor="@color/black"
        android:textSize="12sp"

        android:textStyle="normal"


        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/readclient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#4472C4"
        android:text="@string/example_device_static_ip_for_backup_radio_portal"


        android:textAllCaps="false"
        android:textColor="@color/white"

        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#4472C4"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/nav2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#4472C4"
        android:text="@string/gcs_radio_"
        android:textAllCaps="false"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nav" />


    <Button
        android:id="@+id/nav3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#4472C4"
        android:text="@string/drone_radio_"
        android:textAllCaps="false"
        android:textColor="@color/white"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nav2" />

    <Button
        android:id="@+id/nav4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/backup_ip_"
        android:textAllCaps="false"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nav3"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="600dp"
        android:layout_height="80dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/img11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/navigation_bar_3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/static_ip_exp"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readclient"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/background" />

</androidx.constraintlayout.widget.ConstraintLayout>