<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">


    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="175dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="-15dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/GroundControlInput"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        tools:ignore="HardcodedText" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="175dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/connecteddroneIP"
        app:layout_constraintStart_toStartOf="@+id/spinner4"
        tools:ignore="HardcodedText" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="-15dp"
        app:layout_constraintStart_toStartOf="@+id/Encryption"
        app:layout_constraintTop_toTopOf="@+id/spinner7"
        tools:ignore="HardcodedText" />

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="270dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/spinner6"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/readclient3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"

        android:backgroundTint="#4472C4"
        android:text="@string/qgroundcontrol_mission_planner_connect_drone_ip_copy_to_clipboard_"

        android:textAllCaps="false"

        android:textColor="@color/white"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/readclient5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="700dp"
        android:backgroundTint="#4472C4"

        android:text="@string/encryption_key_copy_to_clipboard"

        android:textAllCaps="false"

        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/readclient2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"

        android:backgroundTint="#4472C4"
        android:text="@string/login_username_copy_to_clipboard_"

        android:textAllCaps="false"

        android:textColor="@color/white"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/readclient4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"

        android:backgroundTint="#4472C4"

        android:text="@string/login_password_copy_to_clipboard_"

        android:textAllCaps="false"

        android:textColor="@color/white"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ground_control_ip_"
        android:textColor="@color/black"
        android:textSize="18sp"

        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readclient3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Username_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/username"
        android:textColor="@color/black"

        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/readclient2"
        app:layout_constraintTop_toBottomOf="@+id/readclient2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Encryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/encryption_type"

        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/readclient2"
        app:layout_constraintTop_toBottomOf="@+id/readclient5"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"

        android:layout_marginTop="15dp"
        android:text="@string/encryption_cipher"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/spinner7"
        app:layout_constraintTop_toBottomOf="@+id/readclient5"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:text="@string/encryption_key"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/Encryption"
        app:layout_constraintTop_toBottomOf="@+id/spinner6"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/password_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textColor="@color/black"

        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/readclient4"
        app:layout_constraintTop_toBottomOf="@+id/readclient2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_freq"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"

        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/connecteddroneIP"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/radio_frequency"
        android:textColor="@color/black"
        android:textSize="18sp"

        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:text="@string/ground_control_radio"
        android:textColor="@color/black"
        android:textSize="18sp"

        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/readclient3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/GroundControlInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:autofillHints=""
        android:hint="@string/_192_168_xxx_xxx"
        android:inputType="textUri"


        android:lines="1"
        android:maxLength="15"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"

        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"


        android:autofillHints=""
        android:hint="@string/root"
        android:inputType="textUri"
        android:lines="1"
        android:maxLength="15"

        android:maxLines="1"
        android:minHeight="48dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintStart_toStartOf="@+id/Username_"
        app:layout_constraintTop_toBottomOf="@+id/Username_"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"


        android:autofillHints=""
        android:inputType="textUri"
        android:lines="1"
        android:maxLength="15"

        android:maxLines="1"
        android:minHeight="48dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintStart_toStartOf="@+id/password_"
        app:layout_constraintTop_toBottomOf="@+id/Username_"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextFields" />

    <EditText
        android:id="@+id/encryptionkey"
        android:layout_width="570dp"
        android:layout_height="wrap_content"


        android:autofillHints=""
        android:inputType="textUri"
        android:lines="1"
        android:maxLength="64"
        android:maxLines="1"

        android:minHeight="48dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextFields" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/drone_ip_to_connect"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"

        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/readclient3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/drone_radio_type"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"

        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/readclient3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/connecteddroneIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:autofillHints=""
        android:hint="@string/_192_168_xxx_xxx"
        android:inputType="textUri"
        android:lines="1"
        android:maxLength="15"
        android:maxLines="1"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"

        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/nav6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/clear_key_data"

        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/spinner7"
        app:layout_constraintTop_toBottomOf="@+id/readclient5"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="-10dp"
        android:contentDescription="@string/doodleviewlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dv_13" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="-10dp"
        android:layout_marginBottom="-25dp"
        app:layout_constraintBottom_toBottomOf="@+id/GroundControlInput"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        tools:ignore="HardcodedText" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="-25dp"
        app:layout_constraintBottom_toBottomOf="@+id/connecteddroneIP"
        app:layout_constraintStart_toStartOf="@+id/spinner2"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="9dp"


        android:background="@drawable/doodle_view_logo_removebg_preview"
        android:contentDescription="@string/view_logo"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="-10dp"


        android:layout_marginBottom="94dp"
        android:background="@drawable/sak_logo"
        android:contentDescription="@string/view_logo2"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>







